BUG 2475267: Fix sizing of visualizations, calendars in widget * Also make calendars in SDP scroll when too tall * Don't size in widget if there are no meta tabs (like forms)
QA:
* Make sure bug is fixed

--- a/public/stylesheets/external-widget.css
+++ b/public/stylesheets/external-widget.css
@@ -191,6 +191,9 @@
 {
     display: inline;
 }
+
+#data-grid.fc { overflow: auto; }
+
 .blist-table { height: 100%; }
 
 .blist-table-header-scrolls { background-color: #e8e8e2; }
